fixed: table, navbar and scrollbar style

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -42,7 +42,7 @@
 
   /* width */
   ::-webkit-scrollbar {
-    @apply w-2;
+    @apply w-2 h-2;
   }
 
   /* Track */
