--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -2,16 +2,16 @@
 
 @layer base {
   table {
-    @apply w-full bg-theme-300 text-theme-100 lg:text-theme-900;
+    @apply w-full bg-theme-300 text-theme-100 md:text-theme-900;
   }
 
   thead {
-    @apply hidden lg:table-header-group bg-theme-900 text-theme-100;
+    @apply hidden md:table-header-group bg-theme-900 text-theme-100;
   }
 
   tr {
     @apply max-w-full block relative border-b-4 border-theme-100
-      lg:table-row lg:border-b-0;
+      md:table-row md:border-b-0;
   }
 
   tr:last-child {
@@ -19,16 +19,16 @@
   }
 
   td:not(:first-child) {
-    @apply lg:border-l lg:border-t-0 lg:border-r-0 lg:border-b-0 lg:border-theme-100;
+    @apply md:border-l md:border-t-0 md:border-r-0 md:border-b-0 md:border-theme-100;
   }
 
   th {
-    @apply lg:text-left lg:p-3;
+    @apply md:text-left md:p-3;
   }
 
   td {
     @apply flex flex-col xs:flex-row justify-center xs:justify-between items-center text-right py-3 px-4 align-top border-b border-theme-100
-      lg:table-cell lg:text-left lg:p-3 lg:align-middle lg:border-b-0;
+      md:table-cell md:text-left md:p-3 md:align-middle md:border-b-0;
   }
 
   td:last-child {
@@ -36,16 +36,16 @@
   }
 
   tbody tr, tbody tr:nth-child(odd) {
-    @apply lg:hover:bg-theme-600/50 lg:hover:text-theme-100;
+    @apply md:hover:bg-theme-600/50 md:hover:text-theme-100;
   }
 
   tbody tr:nth-child(odd) {
-    @apply lg:bg-theme-100/50;
+    @apply md:bg-theme-100/50;
   }
 
   td:before {
     content: attr(data-label);
-    @apply font-semibold pr-3 text-left lg:hidden text-theme-900;
+    @apply font-semibold pr-3 text-left md:hidden text-theme-900;
   }
 
   td.center {
